# searchlight

./: .gitignore  CMakeLists.txt  README.md
crawler/: CMakeLists.txt  README.md
crawler/include/: config.hpp.in  index_writer.hpp  link_manager.hpp  options.hpp  robots_parser.hpp  utils.hpp  web_crawler.hpp
crawler/src/: index_writer.cpp  link_manager.cpp  main.cpp  options.cpp  robots_parser.cpp  utils.cpp  web_crawler.cpp
server/: CMakeLists.txt
server/src/: main.cpp
server/static/: index.html  results.html
